Fix issues with the edit APIs